@@ -16,6 +16,8 @@ PHP                                                                        NEWS
   . Fixed bug #71089 (No check to duplicate zend_extension). (Remi)
   . Fixed bug #71086 (Invalid numeric literal parse error within
     highlight_string() function). (Nikita)
+  . Fixed bug #71154 (Incorrect HT iterator invalidation causes iterator reuse).
+    (Nikita)
 
 - DBA:
   . Fixed key leak with invalid resource. (Laruence)
